--- a/Lectures/1_intro.Rmd
+++ b/Lectures/1_intro.Rmd
@@ -3,7 +3,7 @@ title: "Intro to Data Science"
 subtitle: "What `R` we doing?"
 author: "Prof. Weldzius"
 institute: "Villanova University"
-date: "Slides Updated: `r Sys.Date()`"
+# date: "Slides Updated: `r Sys.Date()`"
 output:
   xaringan::moon_reader:
     # self_contained: true
@@ -19,7 +19,7 @@ output:
       highlightLines: true
       countIncrementalSlides: false
       slideNumberFormat: "%current%"
-      #ratio: "16:9"
+      ratio: "16:9"
 
 ---
 
@@ -45,75 +45,19 @@ knitr::knit_hooks$set(chunk = function(x, options) {
 
 # Agenda
 
-1. Meet the instructor
+1. Course Motivation
 
-2. Course Motivation
+  - What is data science & why should we care?
 
-  - What is data science (DS) & why should we care?
-
-3. Course Objectives
+2. Course Objectives
 
   - **Content:** Critical thinking, analysis
 
   - **Skills:** Computing and analysis in R
 
-4. ChatGPT and data science
+3. ChatGPT and data science
   
-5. Course Expectations & Syllabus review
-
----
-
-# Meet the instructor
-
-- Education
-
---
-
-  - PhD from UCLA Political Science in 2018
-
-  - Postdocs at WashU and Princeton Niehaus
-  
---
-
-- Published some things
-
---
-
-  - Substantive: [global value chains & currency manipulation](https://onlinelibrary.wiley.com/doi/abs/10.1111/ecpo.12184); [European politics](https://link.springer.com/article/10.1007/s11558-020-09410-0); [economics of land use](https://onlinelibrary.wiley.com/doi/abs/10.1093/aepp/ppy007); [book review on currency statecraft](https://www.cambridge.org/core/journals/perspectives-on-politics/article/abs/currency-statecraft-monetary-rivalry-and-geopolitical-ambition-by-benjamin-j-cohen-chicago-university-of-chicago-press-2019-208p-7500-cloth-2500-paper/6CC4A103F963E26FE3ED08A85B95D265) 
-
-  - Policy: [2014 World Trade Report](https://www.wto.org/english/res_e/booksp_e/world_trade_report14_e.pdf); [polarization & lobbying](https://niehaus.princeton.edu/backlash-against-globalization-what’s-next)
-  
---
-
-- Work
-
---
-
-  - World Trade Organization
-  
-  - Commercial Real Estate (2007/8 global financial crisis)
-
----
-
-# Meet the instructor
-
-- Current research
-
---
-
-  - .red[Global value chains] + .blue[currency manipulation]
-
---
-
-  - .red[Financial crises] + .blue[polarization]
-  
---
-
-  - .red[Trade agreements] + .blue[monopolies]
-  
---
-
-  - .red[Inequality] + .blue[economic growth]
+4. Course Expectations & Syllabus review
 
 ---
 
@@ -122,27 +66,27 @@ knitr::knit_hooks$set(chunk = function(x, options) {
 --
 
 background-image: url(./figs/fight_ds_econ.PNG)
-background-size: contain
+background-size: 80%
 
 --
 
 background-image: url(./figs/fight_ds_ps.PNG)
-background-size: contain
+background-size: 80%
 
 --
 
 background-image: url(./figs/fight_ds_cs.PNG)
-background-size: contain
+background-size: 80%
 
 --
 
 background-image: url(./figs/fight_ds_stats.PNG)
-background-size: contain
+background-size: 80%
 
 --
 
 background-image: url(./figs/fight_ds_stem.PNG)
-background-size: contain
+background-size: 80%
 
 ---
 
@@ -153,7 +97,7 @@ background-size: contain
 - No
 
 
-<center><img src="figs/datagrowth.png" width = "90%"></center>
+<center><img src="figs/datagrowth.png" width = "70%"></center>
 
 
 ---
@@ -162,7 +106,7 @@ background-size: contain
 
 - But there are faddish qualities
 
-<center><img src="figs/hype_cycle.png" width = "85%"></center>
+<center><img src="figs/hype_cycle.png" width = "65%"></center>
 
 
 ---
@@ -204,13 +148,13 @@ background-size: contain
 
 # The Two Camps
 
-<center><img src="figs/camps1.png" width="80%"></center>
+<center><img src="figs/camps1.png" width="60%"></center>
 
 ---
 
 # The Two Camps
 
-<center><img src="figs/camps2.png" width="80%"></center>
+<center><img src="figs/camps2.png" width="60%"></center>
 
 ---
 
@@ -313,341 +257,6 @@ data.frame(step = c('Observation','Question','Theory','Hypothesis','Data Collect
   xlab(NULL) + ylab(NULL)
 ```
 
-
-
----
-
-# .blue[Research] Camp
-
---
-
-<center><img src="figs/weldzius2021.png" width=80%></center>
-
----
-
-# .blue[Research] Camp
-
-1. **.red[Observation]** &rarr; **.blue[Question]**
-  
---
-
-  - Observation is facilitated by .red[data] (Descriptive analysis)
-
---
-
-<img src="figs/bergsten2019_1.png" width="100%">
-
----
-
-# .blue[Research] Camp
-
-1. **.red[Observation]** &rarr; **.blue[Question]**
-
-  - Observation is facilitated by .red[data] (Descriptive analysis)
-
-<img src="figs/bergsten2019_2.png" width="100%">
-
-
-<!-- --- -->
-
-<!-- # .blue[Research] Camp -->
-
-<!-- 1. **.red[Observation]** &rarr; **.blue[Question]** -->
-
-<!--   - Observation is facilitated by .red[data] (Descriptive analysis) -->
-
-<!--   - Number of currency manipulators per year according to Bergsten-Gagnon criteria -->
-
-<!-- <img src="figs/weldzius2021_manip.png" width="90%"> -->
-
-
----
-
-# .blue[Research] Camp
-
-1. **.red[Observation]** &rarr; **.blue[Question]**
-
-  - The question pertains to .blue[science]
-  
---
-
-  - e.g., why have countries stopped (or attenuated) currency manipulation?
-
-<center><img src="figs/currencywar.jpeg" width="80%"></center>
-
----
-
-# .blue[Research] Camp
-
-<ol start = 2>
-
-<li>  **.blue[Theory]** &rarr; **.blue[Hypothesis]**
-  
---
-
-  - Theorizing requires abstraction & simplification
-  
---
-
-  - e.g., trade has changed and therefore the exchange rate preferences of political actors have changed
-  
---
-
-  - Changing trade: global value chains now account for 70% of global trade (~50% in 1990s)
-  
---
-  
-  - Hypotheses fall out naturally from well-done theory
-  
---
-  
-  - **H1**: *global value chain trade should moderate the relationship between export dependence and currency manipulation*
-
----
-
-# .blue[Research] Camp
-
-<ol start = 3>
-
-<li> **.red[Data Collection / Wrangling]** &rarr; **.red[Analysis]**
-
-<!--   - Data collection separates "Data Science"... -->
-
-<!--     - ...from "Science, with data" -->
-
-<!-- -- -->
-  
-  - collect national input-output tables (matrices) & estimate global value chain linkages
-
-
----
-
-background-image: url(./figs/plot11_empty1.png)
-background-size: contain
-
---
-
-background-image: url(./figs/plot11_empty2.png)
-background-size: contain
-
---
-
-background-image: url(./figs/plot11_empty3.png)
-background-size: contain
-
---
-
-background-image: url(./figs/plot11_1995.png)
-background-size: contain
-
---
-
-background-image: url(./figs/plot11_1996.png)
-background-size: contain
-
---
-
-background-image: url(./figs/plot11_1997.png)
-background-size: contain
-
---
-
-background-image: url(./figs/plot11_1998.png)
-background-size: contain
-
---
-
-background-image: url(./figs/plot11_1999.png)
-background-size: contain
-
---
-
-background-image: url(./figs/plot11_2000.png)
-background-size: contain
-
---
-
-background-image: url(./figs/plot11_2001.png)
-background-size: contain
-
---
-
-background-image: url(./figs/plot11_2002.png)
-background-size: contain
-
---
-
-background-image: url(./figs/plot11_2003.png)
-background-size: contain
-
---
-
-background-image: url(./figs/plot11_2004.png)
-background-size: contain
-
---
-
-background-image: url(./figs/plot11_2005.png)
-background-size: contain
-
---
-
-background-image: url(./figs/plot11_2006.png)
-background-size: contain
-
---
-
-background-image: url(./figs/plot11_2007.png)
-background-size: contain
-
---
-
-background-image: url(./figs/plot11_2008.png)
-background-size: contain
-
---
-
-background-image: url(./figs/plot11_2009.png)
-background-size: contain
-
---
-
-background-image: url(./figs/plot11_2010.png)
-background-size: contain
-
---
-
-background-image: url(./figs/plot11_2011.png)
-background-size: contain
-
---
-
-background-image: url(./figs/plot11_2012.png)
-background-size: contain
-
---
-
-background-image: url(./figs/plot11_2013.png)
-background-size: contain
-
---
-
-background-image: url(./figs/plot11_2014.png)
-background-size: contain
-
---
-
-background-image: url(./figs/plot11_2015.png)
-background-size: contain
-
---
-
-background-image: url(./figs/plot11_2016.png)
-background-size: contain
-
---
-
-background-image: url(./figs/plot11_2017.png)
-background-size: contain
-
---
-
-background-image: url(./figs/plot11_2018.png)
-background-size: contain
-
---
-
-background-image: url(./figs/plot11_2019.png)
-background-size: contain
-
---
-
-background-image: url(./figs/plot11_2020.png)
-background-size: contain
-
----
-
-# .blue[Research] Camp
-
-<ol start = 3>
-
-<li> **.red[Data Collection / Wrangling]** &rarr; **.red[Analysis]**
-
-- Analysis is informed by the .red[data] you have collected...
-
-- ...and the .blue[hypotheses] you have generated
-
-<center><img src="figs/figure2a.png" width="60%"></center>
-
-<!-- --- -->
-
-<!-- # .blue[Research] Camp -->
-
-<!-- <ol start = 3> -->
-
-<!-- <li> **.red[Data Collection / Wrangling]** &rarr; **.red[Analysis]** -->
-
-<!-- - Analysis is informed by the .red[data] you have collected... -->
-
-<!-- - ...and the .blue[hypotheses] you have generated -->
-
-<!-- <center><img src="figs/figure2b.png" width="60%"></center> -->
-
----
-
-# .blue[Research] Camp
-
-<ol start = 4>
-
-<li> **.red[Results]** &rarr; **.blue[Conclusion]**
-
-  - Results fall out naturally from the analysis...
-  
-  - ...and must be interpreted in terms of the theory and hypotheses...
-  
-  - ...to draw conclusions
-
-<center><img src="figs/plot13c.png" width=70%"></center>
-
----
-
-# .blue[Research] Camp
-
-<ol start = 4>
-
-<li> **.red[Results]** &rarr; **.blue[Conclusion]**
-
-  - Results fall out naturally from the analysis...
-  
-  - ...and must be interpreted in terms of the theory and hypotheses...
-  
-  - ...to draw conclusions
-
-<center><img src="figs/plot14c.png" width="60%"></center>
-
----
-
-# .blue[Research] Camp
-
-<ol start = 4>
-
-<li> **.red[Results]** &rarr; **.blue[Conclusion]**
-
-  - Results fall out naturally from the analysis...
-  
-  - ...and must be interpreted in terms of the theory and hypotheses...
-  
-  - ...to draw conclusions
-
-<center><img src="figs/plot15c.png" width="60%"></center>
-
----
-
-# The Two Camps
-
-<center><img src="figs/camps2.png" width="80%"></center>
-
-
 ---
 
 # Course Objectives
@@ -678,19 +287,15 @@ background-size: contain
 
 # Learning goals
 
-1. Generate a sophisticated research question based on clearly described assumptions and a narrowly defined hypothesis.
+1. Understand the uses of quantitative data for analyzing sophisticated research questions
 
 --
 
-2. Describe the data used to investigate this research question, including univariate and multivariate visualizations and summary statistics.
+2. Describe data used to investigate research questions, including univariate and multivariate visualizations and summary statistics.
 
 --
 
-3. Apply the appropriate methods to answer the research question and evaluate the hypothesis.
-
---
-
-4. Acknowledge limitations of methods and results, and describe a superior empirical setting that would overcome these limitations.
+3. Apply the appropriate methods to answer research questions and evaluate the hypotheses.
 
 
 ---
@@ -780,23 +385,23 @@ background-size: contain
   
 --
 
-- 4 problem sets (19 points each)
+- 4 problem sets (76 points total)
   
   - 2 extra credit points available each PSet
   
 --
 
-- 100 points: (14 x 2) + (19 x 4)
+- 100 points: (12 x 2) + (19 x 4)
 
 --
 
-- 12 extra credit points available
+- +12 extra credit points available
 
 ---
 
 # Grades: Homework
 
-- Think of these as your readings/practice for each class. Do them!
+- Think of these as your readings/practice for each class. 
 
 --
 
@@ -804,7 +409,7 @@ background-size: contain
 
 --
 
--  Due by midnight on day assigned (no late homework accepted!)
+- Due by midnight on day assigned (no late homework accepted!)
 
 
 ---
@@ -843,8 +448,7 @@ background-size: contain
 
 --
   
-  - ChatGPT: provide a link to your session if you have an account; otherwise, print the output as PDF
-  - Microsoft Copilot: print the output as PDF
+  - Print the output as PDF
   
 ---
 
@@ -953,8 +557,10 @@ background-size: contain
 
 --
 
-  1. Work through psc4175_hw_1.Rmd
+  1. Review course Github page (https://github.com/rweldzius/PSC4175_SUM2025/tree/main)
   
-  2. Create a CampusWire account (PIN: )
+  2. Work through psc4175_hw_1.Rmd (see Github)
+  
+  2. Create a CampusWire account (Link: https://campuswire.com/p/GF9F6AD11. PIN: 3731)
   
   3. Create a Copilot account (https://copilot.microsoft.com/)
