--- a/Homeworks/psc4175_hw_7.Rmd
+++ b/Homeworks/psc4175_hw_7.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Confidence and Uncertainty"
-subtitle: "Homework"
+subtitle: "Homework 7"
 author: "Prof. Weldzius"
 institute: "Villanova University"
 date: "Due Date: 2025-06-09"
